[Hotfix] Fix icons misalignment.

--- a/_common.css
+++ b/_common.css
@@ -92,11 +92,51 @@
 	scrollbar-width: 12px;
 	scrollbar-color: #111 #fff;
 	/* anim */
-	-webkit-transition: opacity 0.3s ease, height 0.3s ease, width 0.3s ease, transform 0.3s ease, margin 0.3s ease, padding 0.3s ease, background-color 0.3s ease, filter 0.3s ease !important;
-	-o-transition: opacity 0.3s ease, height 0.3s ease, width 0.3s ease, transform 0.3s ease, margin 0.3s ease, padding 0.3s ease, background-color 0.3s ease, filter 0.3s ease !important;
-	-ms-transition: opacity 0.3s ease, height 0.3s ease, width 0.3s ease, transform 0.3s ease, margin 0.3s ease, padding 0.3s ease, background-color 0.3s ease, filter 0.3s ease !important;
-	-moz-transition: opacity 0.3s ease, height 0.3s ease, width 0.3s ease, transform 0.3s ease, margin 0.3s ease, padding 0.3s ease, background-color 0.3s ease, filter 0.3s ease !important;
-	transition: opacity 0.3s ease, height 0.3s ease, width 0.3s ease, transform 0.3s ease, margin 0.3s ease, padding 0.3s ease, background-color 0.3s ease, filter 0.3s ease !important;
+	-webkit-transition:
+		opacity 0.3s ease,
+		height 0.3s ease,
+		width 0.3s ease,
+		transform 0.3s ease,
+		margin 0.3s ease,
+		padding 0.3s ease,
+		background-color 0.3s ease,
+		filter 0.3s ease !important;
+	-o-transition:
+		opacity 0.3s ease,
+		height 0.3s ease,
+		width 0.3s ease,
+		transform 0.3s ease,
+		margin 0.3s ease,
+		padding 0.3s ease,
+		background-color 0.3s ease,
+		filter 0.3s ease !important;
+	-ms-transition:
+		opacity 0.3s ease,
+		height 0.3s ease,
+		width 0.3s ease,
+		transform 0.3s ease,
+		margin 0.3s ease,
+		padding 0.3s ease,
+		background-color 0.3s ease,
+		filter 0.3s ease !important;
+	-moz-transition:
+		opacity 0.3s ease,
+		height 0.3s ease,
+		width 0.3s ease,
+		transform 0.3s ease,
+		margin 0.3s ease,
+		padding 0.3s ease,
+		background-color 0.3s ease,
+		filter 0.3s ease !important;
+	transition:
+		opacity 0.3s ease,
+		height 0.3s ease,
+		width 0.3s ease,
+		transform 0.3s ease,
+		margin 0.3s ease,
+		padding 0.3s ease,
+		background-color 0.3s ease,
+		filter 0.3s ease !important;
 }
 html,
 body {
@@ -138,16 +178,23 @@ p {
 }
 pre {
 	margin: 0;
-    padding: 0.125rem 0.25rem;
+	padding: 0.125rem 0.25rem;
 	line-height: 1;
-    overflow: auto;
-    width: auto;
-    height: auto;
+	overflow: auto;
+	width: auto;
+	height: auto;
 }
 i,
-i.fas,
-span.fas {
-	padding: 0.125rem 0.25rem;
+.fa,
+.fa-brands,
+.fa-classic,
+.fa-regular,
+.fa-solid,
+.fab,
+.far,
+.fas {
+	padding: 0.125rem 0rem;
+	margin: 0rem 0.25rem;
 }
 i.input-icon,
 i.select-icon {
@@ -272,27 +319,57 @@ th {
 }
 .text-dark-shadow,
 .text-dark-shadow * {
-	text-shadow: 0px 0px 5px var(--dark-transparent), 2px 0px 5px var(--dark-transparent), -2px 0px 5px var(--dark-transparent), 0px 2px 5px var(--dark-transparent), 0px -2px 5px var(--dark-transparent);
+	text-shadow:
+		0px 0px 5px var(--dark-transparent),
+		2px 0px 5px var(--dark-transparent),
+		-2px 0px 5px var(--dark-transparent),
+		0px 2px 5px var(--dark-transparent),
+		0px -2px 5px var(--dark-transparent);
 }
 .text-darker-shadow,
 .text-darker-shadow * {
-	text-shadow: 0px 0px 5px var(--dark-color), 2px 0px 5px var(--dark-color), -2px 0px 5px var(--dark-color), 0px 2px 5px var(--dark-color), 0px -2px 5px var(--dark-color);
+	text-shadow:
+		0px 0px 5px var(--dark-color),
+		2px 0px 5px var(--dark-color),
+		-2px 0px 5px var(--dark-color),
+		0px 2px 5px var(--dark-color),
+		0px -2px 5px var(--dark-color);
 }
 .text-darkest-shadow,
 .text-darkest-shadow * {
-	text-shadow: 0px 0px 5px var(--dark-color), 5px 0px 5px var(--dark-color), -5px 0px 5px var(--dark-color), 0px 5px 5px var(--dark-color), 0px -5px 5px var(--dark-color);
+	text-shadow:
+		0px 0px 5px var(--dark-color),
+		5px 0px 5px var(--dark-color),
+		-5px 0px 5px var(--dark-color),
+		0px 5px 5px var(--dark-color),
+		0px -5px 5px var(--dark-color);
 }
 .text-light-shadow,
 .text-light-shadow * {
-	text-shadow: 0px 0px 5px var(--light-transparent), 2px 0px 5px var(--light-transparent), -2px 0px 5px var(--light-transparent), 0px 2px 5px var(--light-transparent), 0px -2px 5px var(--light-transparent);
+	text-shadow:
+		0px 0px 5px var(--light-transparent),
+		2px 0px 5px var(--light-transparent),
+		-2px 0px 5px var(--light-transparent),
+		0px 2px 5px var(--light-transparent),
+		0px -2px 5px var(--light-transparent);
 }
 .text-lighter-shadow,
 .text-lighter-shadow * {
-	text-shadow: 0px 0px 5px var(--light-color), 2px 0px 5px var(--light-color), -2px 0px 5px var(--light-color), 0px 2px 5px var(--light-color), 0px -2px 5px var(--light-color);
+	text-shadow:
+		0px 0px 5px var(--light-color),
+		2px 0px 5px var(--light-color),
+		-2px 0px 5px var(--light-color),
+		0px 2px 5px var(--light-color),
+		0px -2px 5px var(--light-color);
 }
 .text-lightest-shadow,
 .text-lightest-shadow * {
-	text-shadow: 0px 0px 5px var(--light-color), 5px 0px 5px var(--light-color), -5px 0px 5px var(--light-color), 0px 5px 5px var(--light-color), 0px -5px 5px var(--light-color);
+	text-shadow:
+		0px 0px 5px var(--light-color),
+		5px 0px 5px var(--light-color),
+		-5px 0px 5px var(--light-color),
+		0px 5px 5px var(--light-color),
+		0px -5px 5px var(--light-color);
 }
 .text-white,
 .text-white * {
